--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Página Contable</h1>
+        <h1>RGG GESTORES S.L.</h1>
     </header>
     <main>
         <p>Gestiona tus cuentas fácilmente con nuestra herramienta en línea.</p>
