--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 <body>
     <header>
         <h1>RGG GESTORES S.L.</h1>
+        <nav>
+            <ul>
+                <li><a href="about.html">Quiénes Somos</a></li>
+                <li><a href="products.html">Nuestros Productos</a></li>
+                <li><a href="contact.html">Contáctanos</a></li>
+                <li><a href="pricing.html">Precios</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <h2>Bienvenido a RGG Gestores S.L.</h2>
         <p>Gestiona tus cuentas fácilmente con nuestra herramienta en línea.</p>
         <img src="images/accounting.jpg" alt="Contabilidad" id="main-image">
-        <button id="clickButton">Haz clic aquí</button>
-        <p id="message"></p>
     </main>
-    <script src="script.js"></script>
+    <footer>
+        <p>© 2024 RGG Gestores S.L. - Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
+
