--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RGG Gestores SL</title>
+    <title>RGG Consultores SL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>RGG GESTORES S.L.</h1>
+        <h1>RGG Consultores S.L.</h1>
         <nav>
             <ul>
                 <li><a href="about.html">Quiénes Somos</a></li>
@@ -19,12 +19,12 @@
         </nav>
     </header>
     <main>
-        <h2>Bienvenido a RGG Gestores S.L.</h2>
+        <h2>Bienvenido a RGG Consultores S.L.</h2>
         <p>Gestiona tus cuentas fácilmente con nuestra herramienta en línea.</p>
         <img src="images/accounting.jpg" alt="Contabilidad" id="main-image">
     </main>
     <footer>
-        <p>© 2024 RGG Gestores S.L. - Todos los derechos reservados.</p>
+        <p>© 2024 RGG Consultores S.L. - Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
