--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiénes Somos - RGG Gestores</title>
+    <title>Quiénes Somos - RGG Consultores</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>RGG GESTORES S.L.</h1>
+        <h1>RGG Consultores S.L.</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -21,10 +21,10 @@
     </header>
     <main>
         <h2>Quiénes Somos</h2>
-        <p>En RGG Gestores S.L., contamos con años de experiencia en la gestión contable y asesoría fiscal para empresas y autónomos.</p>
+        <p>En RGG Consultores S.L., contamos con años de experiencia en la gestión contable y asesoría fiscal para empresas y autónomos.</p>
     </main>
     <footer>
-        <p>© 2024 RGG Gestores S.L. - Todos los derechos reservados.</p>
+        <p>© 2024 RGG Consultores S.L. - Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
