--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RGG Gestores SL</title>
+    <title>RGG Consultores SL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>RGG GESTORES S.L.</h1>
+        <h1>RGG Consultores S.L.</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -26,7 +26,7 @@
     <p>Teléfono: +34 622 362 475 </p>
 </main>
 <footer>
-    <p>© 2024 RGG Gestores S.L. - Todos los derechos reservados.</p>
+    <p>© 2024 RGG Consultores S.L. - Todos los derechos reservados.</p>
 </footer>
 </body>
 </html>
